# qm_story_engine_2

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.local.json
.specs/: architecture_decisions.md  character_knowledge_spec.md  core_specs.md  design_guide.md  feature_dependency_map.md  llm_integration_spec.md  pico_theme.html  semantic_graph_search_spec.md  story_goals_spec.md  tech_stack_architecture_spec.md  timeline_event_modeling.md
app/: __init__.py  config.py  main.py
app/api/: goals.py  (+9 more)
docs/: README.md  architecture.md  phase4-backend-api.md  scene-editor-ux.md
project/: README.md  implementation-status.md  scene-editor-ux.md  session-log.md  tasks.md
static/: api.js  app.js  entities.js  index.html  page-loader.js  scene-editor.css  scene-editor.js  style.css
supabase/: config.toml  seed.sql  validate_seed_data.sql
temp/: CONTENT_TEAM_IMPLEMENTATION.md  README.md  api_contract.py  debug_relationship_api.py  schema_design.py  test_model_validation.py  test_rebuilt_api.py  verify_database.py
tests/: __init__.py  conftest.py  test_api.py  test_api_validation.py  test_complete_workflows.py  test_content_integration.py  test_content_operations.py  test_database_connection.py  test_e2e_ai_storytelling.py  test_imports.py  test_knowledge_api.py  test_knowledge_integration.py  test_knowledge_service.py  test_llm_api.py  test_llm_service.py  test_models.py  test_performance_phase3.py  test_phase3_integration.py  test_phase4_backend.py  test_relationships_api.py  test_scene_workflows.py  test_search_api.py  test_semantic_search.py  (+1 more)
(+26 files in other folders)
